Fixat mer CSS så att textflödet blir bra med word-wrap.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -125,6 +125,7 @@ button:active {
 			}
 			.blog-content {
 				color: black;
+				word-wrap: break-word;
 			}
 			img {
 				width: 100%;
